Fix: corregir configuración de despliegue en Cloud Run
- Reemplazar spring-cloud-gcp-starter-sql-postgresql por driver JDBC estandar (auth-service y account-service)
- Agregar .gcloudignore para evitar que .gitignore excluya application.properties de los builds de Cloud Build
- Migrar conexion a Cloud SQL de IP publica a IP privada via conector VPC Serverless
- Corregir nombres de variables de entorno en account-service (ACCOUNT_DB_* en vez de DB_*)
- Limpiar carpeta .metadata de Eclipse y archivos .DS_Store del repositorio